tests/lean/1102.lean.expected.out
1102.lean:22:35-22:49: error: failed to synthesize
  DVR 1

Additional diagnostic information may be available using the `set_option diagnostics true` command.
